[project]
name = "versioning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre Quinton", email = "pierre.quinton@epfl.ch"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
